# AIFI

./: build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
AIFI-Native/: CMakeLists.txt
AIFI-Native/src/: AIFINativeEngine.cpp  com_aificraft_AIFINativeEngine.h
src/main/java/com/aificraft/: AIFICraft.java  AIFINativeEngine.java
src/main/java/com/aificraft/mixin/: GameRendererMixin.java
src/main/resources/: aificraft.mixins.json  fabric.mod.json
